Fixed Alignment Issue

--- a/src/app/youth-intake/youthIntake.module.css
+++ b/src/app/youth-intake/youthIntake.module.css
@@ -78,6 +78,12 @@
   cursor: pointer;
   font-size: 16px;
   width: 100%; /* Button width */
+
+   /* positioning changes: */
+  position: relative; /* Positions the button relative to the form */
+  bottom: 0;          /* Aligns to the bottom edge */
+  left: 700;           /* Aligns to the right edge */
+  width: auto;        /* Resets width from 100% to auto so padding doesn't push it out */
 }
 
 .submitButton:hover,
